[gd_scene load_steps=11 format=2]

[ext_resource path="res://Textures/Title/TitleBG.png" type="Texture" id=1]
[ext_resource path="res://HUD/Theme.tres" type="Theme" id=2]
[ext_resource path="res://Textures/Title/Button.png" type="Texture" id=3]
[ext_resource path="res://Textures/Title/ButtonHover.png" type="Texture" id=4]
[ext_resource path="res://Textures/Title/ButtonPressed.png" type="Texture" id=5]
[ext_resource path="res://TitleScreen.gd" type="Script" id=6]
[ext_resource path="res://Textures/Title/OpeningBG.png" type="Texture" id=7]
[ext_resource path="res://HUD/ThemeBig.tres" type="Theme" id=8]
[ext_resource path="res://SaveScreen.tscn" type="PackedScene" id=9]
[ext_resource path="res://OptionsScreen.tscn" type="PackedScene" id=10]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainTitle" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MainTitle"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainTitle"]
margin_left = 895.0
margin_top = 6.0
margin_right = 1098.0
margin_bottom = 64.0
rect_scale = Vector2( 5, 3 )
theme = ExtResource( 2 )
text = "SONIC SHOCK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="MainTitle"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1913.0
margin_top = -58.0
margin_right = -1187.0
theme = ExtResource( 2 )
text = "Copyright 2022 Haunted Bees Productions"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainTitle"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1882.0
margin_top = 41.0
margin_right = -1443.0
margin_bottom = 809.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_NewGame" type="TextureButton" parent="MainTitle/VBoxContainer"]
margin_right = 439.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 128 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="MainTitle/VBoxContainer/Button_NewGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -29.0
margin_right = 125.0
margin_bottom = 29.0
rect_min_size = Vector2( 250, 0 )
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 125, 29 )
theme = ExtResource( 2 )
text = "NEW GAME"
align = 1

[node name="Button_Continue" type="TextureButton" parent="MainTitle/VBoxContainer"]
margin_top = 160.0
margin_right = 439.0
margin_bottom = 288.0
rect_min_size = Vector2( 0, 128 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="MainTitle/VBoxContainer/Button_Continue"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -29.0
margin_right = 125.0
margin_bottom = 29.0
rect_min_size = Vector2( 250, 0 )
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 125, 29 )
theme = ExtResource( 2 )
text = "Continue"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_LoadGame" type="TextureButton" parent="MainTitle/VBoxContainer"]
margin_top = 320.0
margin_right = 439.0
margin_bottom = 448.0
rect_min_size = Vector2( 0, 128 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="MainTitle/VBoxContainer/Button_LoadGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -29.0
margin_right = 125.0
margin_bottom = 29.0
rect_min_size = Vector2( 250, 0 )
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 125, 29 )
theme = ExtResource( 2 )
text = "Load Game"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Options" type="TextureButton" parent="MainTitle/VBoxContainer"]
margin_top = 480.0
margin_right = 439.0
margin_bottom = 608.0
rect_min_size = Vector2( 0, 128 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="MainTitle/VBoxContainer/Button_Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -29.0
margin_right = 125.0
margin_bottom = 29.0
rect_min_size = Vector2( 250, 0 )
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 125, 29 )
theme = ExtResource( 2 )
text = "Options"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Quit" type="TextureButton" parent="MainTitle/VBoxContainer"]
margin_top = 640.0
margin_right = 439.0
margin_bottom = 768.0
rect_min_size = Vector2( 0, 128 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="MainTitle/VBoxContainer/Button_Quit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -29.0
margin_right = 125.0
margin_bottom = 29.0
rect_min_size = Vector2( 250, 0 )
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 125, 29 )
theme = ExtResource( 2 )
text = "Quit"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpeningInfo" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="OpeningInfo"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="OpeningInfo"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.788235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="OpeningInfo"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 22.0
margin_top = 16.0
margin_right = -10.0
margin_bottom = -16.0
theme = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "Welcome to [color=#FF00FF]Space Colony M0b1[/color], your new home. After your home planet was attacked by [color=#FF00FF]Doctor Roboton[/color], it was only a matter of time before your home was inhospitable to life. Working quickly, the world's greatest scientists and engineers came together to build [color=#FF00FF]M0B1[/color]. Fearing another attack from [color=#FF00FF]Roboton[/color], the construction was done and completed in secret. After a decade of operation with no issues, the leaders decided it was time to open up the colony to the rest of the planet. You just entered your cryogenic chamber and closed your eyes, ready to wake up once your ship reaches [color=#FF00FF]m0b1[/color]."
text = "Welcome to Space Colony M0b1, your new home. After your home planet was attacked by Doctor Roboton, it was only a matter of time before your home was inhospitable to life. Working quickly, the world's greatest scientists and engineers came together to build M0B1. Fearing another attack from Roboton, the construction was done and completed in secret. After a decade of operation with no issues, the leaders decided it was time to open up the colony to the rest of the planet. You just entered your cryogenic chamber and closed your eyes, ready to wake up once your ship reaches m0b1."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveScreen" parent="." instance=ExtResource( 9 )]
visible = false

[node name="OptionsScreen" parent="." instance=ExtResource( 10 )]
visible = false

[connection signal="pressed" from="MainTitle/VBoxContainer/Button_Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="MainTitle/VBoxContainer/Button_LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="MainTitle/VBoxContainer/Button_Options" to="." method="_on_Options_pressed"]
[connection signal="back_save" from="SaveScreen" to="." method="_on_SaveScreen_back_save"]
